<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameBottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frameBottom">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Mon"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/rainy"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Tue"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/clear_sky"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Wed"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/snowy"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Thu"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/stormy"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Fri"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/clear_sky"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="@string/Sat"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/foggy"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#d9f5f5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:text="Sun"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="@string/drizzle"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="26dp"
                        android:gravity="center"
                        android:text="20°C- 25°C"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

